--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-"Hello, World!" 
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta name="author" content="Zhendryk">
+    <meta http-equiv="content-type" content="text/html">
+    <meta name="description" content="Portfolio">
+    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width">
+    <meta charset="UTF-8">
+    <title>zhendryk.github.io</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+</head>
+
+<body>
+    <div id="root"></div>
+    <!-- Dependencies -->
+    <script src="./node_modules/react/umd/react.development.js"></script>
+    <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
+</body>
+
+</html>
