--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,11 @@
 </head>
 
 <body>
-    <div id="root"></div>
     <!-- Dependencies -->
-    <script src="./node_modules/react/umd/react.development.js"></script>
-    <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    <!-- Application Code -->
+    <div id="root"></div>
 </body>
 
 </html>
